支持自定义事件

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
-    <title>page-creator-components</title>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="apple-touch-fullscreen" content="YES" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <title>测试</title>
+    <link rel="stylesheet" href="//s.thsi.cn/cb?js/m/kh/common/styles/;adblock.css" />
+    <script src="//s.thsi.cn/js/m/kh/insurance2_0/scripts/autoFontSize.min.js"></script>
   </head>
 
   <body>
